# backend/src/main/java/br/com/exameperto/identity/DelivererInput.java
@@ -1,0 +1,6 @@
+package br.com.exameperto.identity;
+
+import jakarta.validation.constraints.NotNull;
+import java.time.LocalDate;
+
+record DelivererInput(@NotNull LocalDate birthDate) {}
